make index static, rename goatfacts -> facts
