# gen/facts/endpoints.go
@@ -1,0 +1,51 @@
+// Code generated by goa v3.4.2, DO NOT EDIT.
+//
+// facts endpoints
+//
+// Command:
+// $ goa gen github.com/martinohmann/goatops.farm/design
+
+package facts
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "facts" service endpoints.
+type Endpoints struct {
+	List       goa.Endpoint
+	ListRandom goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "facts" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		List:       NewListEndpoint(s),
+		ListRandom: NewListRandomEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "facts" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.List = m(e.List)
+	e.ListRandom = m(e.ListRandom)
+}
+
+// NewListEndpoint returns an endpoint function that calls the method "list" of
+// service "facts".
+func NewListEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req interface{}) (interface{}, error) {
+		return s.List(ctx)
+	}
+}
+
+// NewListRandomEndpoint returns an endpoint function that calls the method
+// "list-random" of service "facts".
+func NewListRandomEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req interface{}) (interface{}, error) {
+		p := req.(*ListRandomPayload)
+		return s.ListRandom(ctx, p)
+	}
+}
