# gen/goatfacts/endpoints.go
@@ -1,62 +1,0 @@
-// Code generated by goa v3.4.2, DO NOT EDIT.
-//
-// goatfacts endpoints
-//
-// Command:
-// $ goa gen github.com/martinohmann/goatops.farm/design
-
-package goatfacts
-
-import (
-	"context"
-
-	goa "goa.design/goa/v3/pkg"
-)
-
-// Endpoints wraps the "goatfacts" service endpoints.
-type Endpoints struct {
-	ListFacts   goa.Endpoint
-	RandomFacts goa.Endpoint
-	Index       goa.Endpoint
-}
-
-// NewEndpoints wraps the methods of the "goatfacts" service with endpoints.
-func NewEndpoints(s Service) *Endpoints {
-	return &Endpoints{
-		ListFacts:   NewListFactsEndpoint(s),
-		RandomFacts: NewRandomFactsEndpoint(s),
-		Index:       NewIndexEndpoint(s),
-	}
-}
-
-// Use applies the given middleware to all the "goatfacts" service endpoints.
-func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
-	e.ListFacts = m(e.ListFacts)
-	e.RandomFacts = m(e.RandomFacts)
-	e.Index = m(e.Index)
-}
-
-// NewListFactsEndpoint returns an endpoint function that calls the method
-// "ListFacts" of service "goatfacts".
-func NewListFactsEndpoint(s Service) goa.Endpoint {
-	return func(ctx context.Context, req interface{}) (interface{}, error) {
-		return s.ListFacts(ctx)
-	}
-}
-
-// NewRandomFactsEndpoint returns an endpoint function that calls the method
-// "RandomFacts" of service "goatfacts".
-func NewRandomFactsEndpoint(s Service) goa.Endpoint {
-	return func(ctx context.Context, req interface{}) (interface{}, error) {
-		p := req.(*RandomFactsPayload)
-		return s.RandomFacts(ctx, p)
-	}
-}
-
-// NewIndexEndpoint returns an endpoint function that calls the method "Index"
-// of service "goatfacts".
-func NewIndexEndpoint(s Service) goa.Endpoint {
-	return func(ctx context.Context, req interface{}) (interface{}, error) {
-		return s.Index(ctx)
-	}
-}
