# gen/http/facts/server/encode_decode.go
@@ -1,0 +1,97 @@
+// Code generated by goa v3.4.2, DO NOT EDIT.
+//
+// facts HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen github.com/martinohmann/goatops.farm/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+	"strconv"
+
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeListResponse returns an encoder for responses returned by the facts
+// list endpoint.
+func EncodeListResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res, _ := v.([]string)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// EncodeListRandomResponse returns an encoder for responses returned by the
+// facts list-random endpoint.
+func EncodeListRandomResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res, _ := v.([]string)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeListRandomRequest returns a decoder for requests sent to the facts
+// list-random endpoint.
+func DecodeListRandomRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+	return func(r *http.Request) (interface{}, error) {
+		var (
+			n   *int
+			err error
+		)
+		{
+			nRaw := r.URL.Query().Get("n")
+			if nRaw != "" {
+				v, err2 := strconv.ParseInt(nRaw, 10, strconv.IntSize)
+				if err2 != nil {
+					err = goa.MergeErrors(err, goa.InvalidFieldTypeError("n", nRaw, "integer"))
+				}
+				pv := int(v)
+				n = &pv
+			}
+		}
+		if err != nil {
+			return nil, err
+		}
+		payload := NewListRandomPayload(n)
+
+		return payload, nil
+	}
+}
+
+// EncodeListRandomError returns an encoder for errors returned by the
+// list-random facts endpoint.
+func EncodeListRandomError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+	encodeError := goahttp.ErrorEncoder(encoder, formatter)
+	return func(ctx context.Context, w http.ResponseWriter, v error) error {
+		en, ok := v.(ErrorNamer)
+		if !ok {
+			return encodeError(ctx, w, v)
+		}
+		switch en.ErrorName() {
+		case "BadRequest":
+			res := v.(*goa.ServiceError)
+			enc := encoder(ctx, w)
+			var body interface{}
+			if formatter != nil {
+				body = formatter(res)
+			} else {
+				body = NewListRandomBadRequestResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.ErrorName())
+			w.WriteHeader(http.StatusBadRequest)
+			return enc.Encode(body)
+		default:
+			return encodeError(ctx, w, v)
+		}
+	}
+}
