# gen/http/facts/server/paths.go
@@ -1,0 +1,18 @@
+// Code generated by goa v3.4.2, DO NOT EDIT.
+//
+// HTTP request path constructors for the facts service.
+//
+// Command:
+// $ goa gen github.com/martinohmann/goatops.farm/design
+
+package server
+
+// ListFactsPath returns the URL path to the facts service list HTTP endpoint.
+func ListFactsPath() string {
+	return "/api/v1/facts"
+}
+
+// ListRandomFactsPath returns the URL path to the facts service list-random HTTP endpoint.
+func ListRandomFactsPath() string {
+	return "/api/v1/facts/random"
+}
