# gen/http/facts/server/types.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.4.2, DO NOT EDIT.
 //
-// goatfacts HTTP server types
+// facts HTTP server types
 //
 // Command:
 // $ goa gen github.com/martinohmann/goatops.farm/design
@@ -8,13 +8,13 @@
 package server
 
 import (
-	goatfacts "github.com/martinohmann/goatops.farm/gen/goatfacts"
+	facts "github.com/martinohmann/goatops.farm/gen/facts"
 	goa "goa.design/goa/v3/pkg"
 )
 
-// RandomFactsBadRequestResponseBody is the type of the "goatfacts" service
-// "RandomFacts" endpoint HTTP response body for the "BadRequest" error.
-type RandomFactsBadRequestResponseBody struct {
+// ListRandomBadRequestResponseBody is the type of the "facts" service
+// "list-random" endpoint HTTP response body for the "BadRequest" error.
+type ListRandomBadRequestResponseBody struct {
 	// Name is the name of this class of errors.
 	Name string `form:"name" json:"name" xml:"name"`
 	// ID is a unique identifier for this particular occurrence of the problem.
@@ -30,10 +30,10 @@ type RandomFactsBadRequestResponseBody struct {
 	Fault bool `form:"fault" json:"fault" xml:"fault"`
 }
 
-// NewRandomFactsBadRequestResponseBody builds the HTTP response body from the
-// result of the "RandomFacts" endpoint of the "goatfacts" service.
-func NewRandomFactsBadRequestResponseBody(res *goa.ServiceError) *RandomFactsBadRequestResponseBody {
-	body := &RandomFactsBadRequestResponseBody{
+// NewListRandomBadRequestResponseBody builds the HTTP response body from the
+// result of the "list-random" endpoint of the "facts" service.
+func NewListRandomBadRequestResponseBody(res *goa.ServiceError) *ListRandomBadRequestResponseBody {
+	body := &ListRandomBadRequestResponseBody{
 		Name:      res.Name,
 		ID:        res.ID,
 		Message:   res.Message,
@@ -44,10 +44,9 @@ func NewRandomFactsBadRequestResponseBody(res *goa.ServiceError) *RandomFactsBad
 	return body
 }
 
-// NewRandomFactsPayload builds a goatfacts service RandomFacts endpoint
-// payload.
-func NewRandomFactsPayload(n *int) *goatfacts.RandomFactsPayload {
-	v := &goatfacts.RandomFactsPayload{}
+// NewListRandomPayload builds a facts service list-random endpoint payload.
+func NewListRandomPayload(n *int) *facts.ListRandomPayload {
+	v := &facts.ListRandomPayload{}
 	v.N = n
 
 	return v
