# gen/http/goatfacts/server/paths.go
@@ -1,23 +1,0 @@
-// Code generated by goa v3.4.2, DO NOT EDIT.
-//
-// HTTP request path constructors for the goatfacts service.
-//
-// Command:
-// $ goa gen github.com/martinohmann/goatops.farm/design
-
-package server
-
-// ListFactsGoatfactsPath returns the URL path to the goatfacts service ListFacts HTTP endpoint.
-func ListFactsGoatfactsPath() string {
-	return "/api/v1/facts"
-}
-
-// RandomFactsGoatfactsPath returns the URL path to the goatfacts service RandomFacts HTTP endpoint.
-func RandomFactsGoatfactsPath() string {
-	return "/api/v1/facts/random"
-}
-
-// IndexGoatfactsPath returns the URL path to the goatfacts service Index HTTP endpoint.
-func IndexGoatfactsPath() string {
-	return "/"
-}
